--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "outDir": "dist",
+    "module": "ESNext",
+    "target": "ES6",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "dist",
-    "rootDir": "src",
     "strict": true,
-    "skipLibCheck": true
-  }
+    "sourceMap": true,
+    "rootDir": "src"
+  },
+  "include": ["src/**/*"]
 }
