--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "ESNext",
-    "target": "ES6",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
-    "sourceMap": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "module": "commonjs",
+    "target": "es6",
+    "esModuleInterop": true
   },
   "include": ["src/**/*"]
 }
