--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
-    "module": "commonjs",
-    "target": "es6",
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
